--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,10 +10,10 @@
 
           <h3>Question {{i+1}}</h3>
 
-          <flash-card [isFlipped]="question.flashCardFlipped">
+          <!-- <flash-card [isFlipped]="question.flashCardFlipped">
               <div class="flash-card-front" [innerHTML]="question.flashCardFront"></div>
               <div class="flash-card-back" [innerHTML]="question.flashCardBack"></div>
-          </flash-card>
+          </flash-card> -->
 
           <h3>{{question.questionText}}</h3>
 
