--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- add to homescreen for ios -->
@@ -41,6 +42,10 @@
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
   <script src="build/vendor.js"></script>
+
+  <!-- chart -->
+  <script src="node_modules/chart.js/src/chart.js"></script>
+
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
