--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,21 +5,20 @@
       <ion-slide class="start-slide">
           <button ion-button color="primary" (click)="nextSlide()">Start!</button>
       </ion-slide>
-
       <ion-slide *ngFor="let question of questions; let i = index;">
 
-          <h3>Question {{i+1}}</h3>
+          <h3 class="question-number">{{i+1}}/20</h3>
 
           <!-- <flash-card [isFlipped]="question.flashCardFlipped">
               <div class="flash-card-front" [innerHTML]="question.flashCardFront"></div>
               <div class="flash-card-back" [innerHTML]="question.flashCardBack"></div>
           </flash-card> -->
 
-          <h3>{{question.questionText}}</h3>
+          <h3 class="question">{{question.questionText}}</h3>
 
           <ion-list no-lines radio-group>
 
-              <ion-item *ngFor="let answer of question.answers; let i = index;">
+              <ion-item class="itens-lista" *ngFor="let answer of question.answers; let i = index;">
 
                   <ion-label>{{options[i]}}. {{answer.answer}}</ion-label>
                   <ion-radio (click)="selectAnswer(answer, question, options[i])" [checked]="answer.selected" [disabled]="hasAnswered"></ion-radio>
@@ -34,9 +33,19 @@
           <h2>Final Score: {{moreOption}}</h2>
 
           <button (click)="restartQuiz()" ion-button full color="primary">Start Again</button>
+          <div style="display: block">
+            <canvas baseChart
+                        [data]="doughnutChartData"
+                        [labels]="doughnutChartLabels"
+                        [chartType]="doughnutChartType"
+                        (chartHover)="chartHovered($event)"
+                        (chartClick)="chartClicked($event)">
+            </canvas>
+          </div>
 
       </ion-slide>
 
   </ion-slides>
+
 
 </ion-content>
